# OpenVLM

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: vision_sft_config.yaml
docs/: architecture.md  cli_usage.md  data_preparation.md  installation.md
examples/: basic_usage.py
open_vlm/: __init__.py
open_vlm/api/: __init__.py  app.py  deps.py  models.py  server.py
open_vlm/cli/: __init__.py  export_cmd.py  main.py
open_vlm/config/: __init__.py  training_config.py
open_vlm/core/: __init__.py  adapters.py  cpp_tensor_processor.py  post_processor.py  quantitative_reasoning.py  vlm_engineer.py
open_vlm/core/datasets/: __init__.py  base_dataset.py  vision_sft_dataset.py
open_vlm/integration/: datasette_integration.py  datasette_utils.py  llm_integration.py
open_vlm/utils/: __init__.py  image_utils.py
tests/: test_adapters.py  test_api.py  test_datasette_export.py
